<resources>
  <string name="date_just_now">Just now</string>
  <string name="date_today">Today</string>
  <string name="date_yesterday">Yesterday</string>
  <string name="date_relative_days_ago">%d days ago</string>
  <string name="date_relative_over_year">Over a year ago</string>
  <string name="negative_btn">Cancel</string>
  <string name="add_btn">Add</string>
  <string name="add_another_btn">Add another</string>
  <string name="just_once_btn">Just once</string>
  <string name="always_btn">Always</string>
  <string name="skip_btn">Skip</string>
  <string name="rename_btn">Rename</string>
  <string name="install_btn">Install</string>
  <string name="backup_btn">Create</string>
  <string name="restore_btn">Restore</string>
  <string name="undo_btn">Undo</string>
  <string name="check_btn">Check</string>
  <string name="last_sync_notice_synced">Synced %s</string>
  <string name="last_sync_notice_syncing">Syncing&#8230;</string>
  <string name="category_all">All</string>
  <string name="category_favorites">Favorite</string>
  <string name="category_available">Available</string>
  <string name="category_delivered">Delivered</string>
  <string name="category_in_transit">In transit</string>
  <string name="category_irregular">Irregular</string>
  <string name="category_unknown">Unknown</string>
  <string name="category_returned">Returned</string>
  <string name="category_archived">Archived</string>
  <string name="action_preferences">Settings</string>
  <string name="action_feedback">Help &amp; feedback</string>
  <string name="action_contact">Talk to Correios</string>
  <string name="title_add">Add item</string>
  <string name="hint_tracking_code">Tracking number</string>
  <string name="helper_text_tracking_code">E.g.: AB123456789CD</string>
  <string name="hint_item_description">Item name</string>
  <string name="title_fetching_item_data">Fetching item data…</string>
  <string name="title_alert_not_found">Add item not found?</string>
  <string name="title_alert_net_error">Add item offline?</string>
  <string name="title_alert_delivered_item">Add delivered item?</string>
  <string name="title_alert_returned_item">Add returned item?</string>
  <string name="msg_alert_empty_cod">Enter the item tracking number.</string>
  <string name="msg_alert_wrong_length_cod">The tracking number must have 13 digits.</string>
  <string name="msg_alert_bad_format_cod">Nonstandard tracking number. Example: RA123456789US</string>
  <string name="msg_alert_invalid_dv_cod">Invalid tracking number: check digit does not match.</string>
  <string name="msg_alert_default_error_cod">Unsupported tracking number :(</string>
  <string name="msg_alert_not_found">Check if the number %s is correct.\n\nIn case the item has been recently posted, it is normal that its information is not yet available.</string>
  <string name="msg_alert_net_error">The Correios service is offline, or the connection failed.\n\nDon\'t worry, we will try again in the next the automatic syncs :)</string>
  <string name="msg_alert_delivered_item">The item has already been delivered to its addressee. Newer status updates are unlikely.</string>
  <string name="msg_alert_returned_item">The item has already been returned to its sender. Newer status updates are unlikely.</string>
  <string name="title_alert_barcode_install">Install Barcode Scanner?</string>
  <string name="msg_alert_barcode_install">The app is required to read barcodes and QR codes.</string>
  <string name="msg_alert_cod_not_found">Tracking number not found. Check if the page has information about the item.</string>
  <string name="notf_channel_sync">Ongoing syncs</string>
  <string name="notf_channel_update">Item updates</string>
  <string name="notf_title_syncing">Syncing items&#8230;</string>
  <string name="notf_tckr_single_obj">%1$s: %2$s</string>
  <string name="notf_tckr_multi_obj">%d items updated</string>
  <string name="notf_line_multi_obj"><![CDATA[<b>%1$s</b> %2$s]]></string>
  <plurals name="notf_summ_multi_obj">
    <item quantity="one">%d item delivered</item>
    <item quantity="other">%d items delivered</item>
  </plurals>
  <string name="text_empty_list">No item here</string>
  <string name="text_empty_list_name"><![CDATA[No item in <b>%s</b>]]></string>
  <string name="text_empty_list_found">No item found</string>
  <string name="text_unknown_location">Unknown location</string>
  <string name="title_send_list">Send via</string>
  <string name="subject_send_list">Tracking list</string>
  <string name="text_send_list_line_1">%s &#9734;\n</string>
  <string name="text_send_list_line_1_fav">%s &#9733;\n</string>
  <string name="text_send_list_line_2">%s\n</string>
  <string name="text_send_list_line_3">%1$s, %2$s\n\n</string>
  <string name="toast_item_added">%s added.</string>
  <string name="toast_archived_count_single">Archived</string>
  <string name="toast_archived_count_multiple">Archived (%d)</string>
  <string name="toast_unarchived_count_single">Moved to All</string>
  <string name="toast_unarchived_count_multiple">Moved to All (%d)</string>
  <string name="toast_deleted_count_single">Deleted</string>
  <string name="toast_deleted_count_multiple">Deleted (%d)</string>
  <string name="toast_item_already_exists">The item %s is already in the tracking list.</string>
  <string name="toast_net_error">Oops! The Correios service is offline, or the connection failed :(</string>
  <string name="toast_unexpected_error">Oops! Something wrong happened :( Please try again later.</string>
  <string name="toast_tracking_code_copied">Tracking number copied to the clipboard.</string>
  <string name="toast_backup_created">Backup created in %s folder.</string>
  <string name="toast_backup_restored">Backup restored!</string>
  <string name="toast_backup_creation_fail">Backup creation failed: %s</string>
  <string name="toast_backup_restore_fail">Backup restore failed: %s</string>
  <string name="toast_backup_not_found">No backups found.</string>
  <string name="toast_external_storage_write_error">External storage unmounted or without write access.</string>
  <string name="toast_external_storage_read_error">External storage unmounted or without read access.</string>
  <string name="opt_search">Search</string>
  <string name="opt_scan_barcode">Scan</string>
  <string name="opt_select_all">Select all</string>
  <string name="opt_deselect_all">Deselect all</string>
  <string name="opt_refresh_item">Refresh</string>
  <string name="opt_rename_item">Rename</string>
  <string name="opt_mark_as_fav">Mark as favorite</string>
  <string name="opt_unmark_as_fav">Unmark as favorite</string>
  <string name="opt_view_place">View on map</string>
  <string name="opt_share">Share</string>
  <string name="opt_open_sro">Open in SRO</string>
  <string name="opt_archive_item">Archive</string>
  <string name="opt_unarchive_item">Move to %s</string>
  <string name="opt_delete_item">Delete</string>
  <string name="title_alert_rename">Rename %s</string>
  <string name="msg_alert_create_backup">Enter the name for the backup file:</string>
  <string name="title_alert_select_backup">Select a backup</string>
  <string name="title_alert_restore_backup">Restore backup?</string>
  <string name="msg_alert_restore_backup"><![CDATA[Are you sure you want to restore the following backup?<br/><br/><b>%s</b><br/><br/>Your current tracking list will be replaced.]]></string>
  <string name="title_record">Item history</string>
  <string name="subtitle_record">%1$s via %2$s</string>
  <string name="share_title">Share via</string>
  <string name="share_status_subject">Item status</string>
  <string name="share_status_text">%1$s %2$s, %3$s #carteiroapp</string>
  <string name="title_preferences">Settings</string>
  <string name="pref_syncing_title">Syncing</string>
  <string name="pref_syncing_summary">On launch, exclusions, data usage</string>
  <string name="pref_auto_sync_title">Automatic syncing</string>
  <string name="pref_auto_sync_summary">Automatically sync items</string>
  <string name="pref_sync_on_launch_title">Sync on launch</string>
  <string name="pref_sync_on_launch_summary">Update items when opening the app</string>
  <string name="pref_sync_favorites_only_title">Only sync favorites</string>
  <string name="pref_sync_favorites_only_summary">Only sync items marked as favorites</string>
  <string name="pref_dont_sync_delivered_items_title">Do not sync delivered items</string>
  <string name="pref_dont_sync_delivered_items_summary">Ignore already delivered or returned items when syncing</string>
  <string name="pref_sync_only_wifi_title">Limit mobile data usage</string>
  <string name="pref_sync_only_wifi_summary">Only sync items on Wi-Fi</string>
  <string name="pref_notification_title">Notifications</string>
  <string name="pref_notification_summary">Syncs, categories, indication</string>
  <string name="pref_activate_notifications_title">Notifications</string>
  <string name="pref_activate_notifications_summary">Enable system notifications</string>
  <string name="pref_notify_sync_title">Ongoing syncs</string>
  <string name="pref_notify_sync_summary">Notify progress of ongoing syncs</string>
  <string name="pref_notify_all_summary">Notify all items</string>
  <string name="pref_notify_favorites_summary">Notify items marked as favorites</string>
  <string name="pref_notify_available_summary">Notify items to be picked up or out for departure</string>
  <string name="pref_notify_delivered_summary">Notify delivered items</string>
  <string name="pref_notify_irregular_summary">Notify items with issues or being treated</string>
  <string name="pref_notify_unknown_summary">Notify items not found or whose status is indeterminate</string>
  <string name="pref_notify_returned_summary">Notify items refused or being returned</string>
  <string name="pref_categories_category">Categories</string>
  <string name="pref_indication_category">Indication</string>
  <string name="pref_ringtone_title">Sound</string>
  <string name="pref_ringtone_summary">Default notification sound</string>
  <string name="pref_lights_title">Blink light</string>
  <string name="pref_vibrate_title">Vibrate</string>
  <string name="pref_notification_settings_title">Additional settings in the system</string>
  <string name="pref_notification_settings_summary">Sound, vibration, light and more</string>
  <string name="pref_appearance_title">Appearance</string>
  <string name="pref_appearance_summary">Initial category, theme, keyboard</string>
  <string name="pref_initial_category_title">Initial category</string>
  <string name="pref_initial_category_summary">Select the category to be displayed on launch</string>
  <string name="pref_theme_title">Theme</string>
  <string name="pref_theme_summary">Choose a theme</string>
  <string name="pref_theme_light">Light</string>
  <string name="pref_theme_dark">Dark</string>
  <string name="pref_theme_system">System default</string>
  <string name="pref_use_adaptive_keyboard_title">Use adaptive keyboard</string>
  <string name="pref_use_adaptive_keyboard_summary">Automatically change keyboard layout while adding item</string>
  <string name="pref_backup_title">Backup</string>
  <string name="pref_backup_summary">Create &amp; restore</string>
  <string name="pref_auto_backup_category">Auto backup</string>
  <string name="pref_manual_backup_category">Manual backup</string>
  <string name="pref_last_backup_summary">Your data is automatically backed up to Google Drive when Android backup is on. Touch to open the system backup settings.</string>
  <string name="pref_create_backup_title">Create backup</string>
  <string name="pref_create_backup_summary">Export data to the external storage</string>
  <string name="pref_restore_backup_title">Restore backup</string>
  <string name="pref_restore_backup_summary">Import data from the external storage</string>
  <string name="pref_about_title">About</string>
  <string name="pref_about_summary">Blog, social networks, version</string>
</resources>