<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <Preference android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$SyncingPreferences"
    android:icon="@drawable/ic_sync_white_24dp"
    android:title="@string/pref_syncing_title"
    android:summary="@string/pref_syncing_summary" />

  <Preference android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$NotificationPreferences"
    android:icon="@drawable/ic_notifications_white_24dp"
    android:title="@string/pref_notification_title"
    android:summary="@string/pref_notification_summary" />

  <Preference android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$AppearancePreferences"
    android:icon="@drawable/ic_color_lens_white_24dp"
    android:title="@string/pref_appearance_title"
    android:summary="@string/pref_appearance_summary" />

  <Preference android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$BackupPreferences"
    android:icon="@drawable/ic_backup_white_24dp"
    android:title="@string/pref_backup_title"
    android:summary="@string/pref_backup_summary" />

  <Preference android:fragment="com.rbardini.carteiro.ui.PreferencesActivity$AboutPreferences"
    android:icon="@drawable/ic_info_white_24dp"
    android:title="@string/pref_about_title"
    android:summary="@string/pref_about_summary" />

</androidx.preference.PreferenceScreen>
