<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:id="@+id/category_menu"
    android:checkableBehavior="single">

    <item android:id="@id/category_all"
      android:icon="@drawable/ic_package_all_white_24dp"
      android:title="@string/category_all" />

    <item android:id="@id/category_favorites"
      android:icon="@drawable/ic_favorite_white_24dp"
      android:title="@string/category_favorites" />

    <item android:id="@id/category_available"
      android:icon="@drawable/ic_schedule_white_24dp"
      android:title="@string/category_available" />

    <item android:id="@id/category_delivered"
      android:icon="@drawable/ic_done_white_24dp"
      android:title="@string/category_delivered" />

    <item android:id="@id/category_in_transit"
      android:icon="@drawable/ic_directions_white_24dp"
      android:title="@string/category_in_transit" />

    <item android:id="@id/category_irregular"
      android:icon="@drawable/ic_info_white_24dp"
      android:title="@string/category_irregular" />

    <item android:id="@id/category_unknown"
      android:icon="@drawable/ic_warning_white_24dp"
      android:title="@string/category_unknown" />

    <item android:id="@id/category_returned"
      android:icon="@drawable/ic_undo_white_24dp"
      android:title="@string/category_returned" />

    <item android:id="@id/category_archived"
      android:icon="@drawable/ic_archive_white_24dp"
      android:title="@string/category_archived" />

  </group>

  <group android:id="@+id/settings_menu"
    android:checkableBehavior="none">

    <item android:id="@+id/action_preferences"
      android:icon="@drawable/ic_settings_white_24dp"
      android:title="@string/action_preferences" />

    <item android:id="@+id/action_feedback"
      android:icon="@drawable/ic_help_white_24dp"
      android:title="@string/action_feedback" />

    <item android:id="@+id/action_contact"
      android:icon="@drawable/ic_question_answer_white_24dp"
      android:title="@string/action_contact" />

  </group>

</menu>
