<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/fav_opt"
    android:icon="@drawable/ic_star_border_white_24dp"
    android:title="@string/opt_mark_as_fav"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/share_opt"
    android:icon="@drawable/ic_share_white_24dp"
    android:title="@string/opt_share"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/place_opt"
    android:icon="@drawable/ic_place_white_24dp"
    android:title="@string/opt_view_place"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/archive_opt"
    android:icon="@drawable/ic_archive_white_24dp"
    android:title="@string/opt_archive_item"
    app:showAsAction="never" />

  <item android:id="@+id/delete_opt"
    android:icon="@drawable/ic_delete_white_24dp"
    android:title="@string/opt_delete_item"
    app:showAsAction="never" />

  <item android:id="@+id/sro_opt"
    android:icon="@drawable/ic_public_white_24dp"
    android:title="@string/opt_open_sro"
    app:showAsAction="never" />

</menu>
