<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

  <item android:id="@+id/select_all_opt"
    android:icon="@drawable/ic_select_all_white_24dp"
    android:title="@string/opt_select_all"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/archive_opt"
    android:icon="@drawable/ic_archive_white_24dp"
    android:title="@string/opt_archive_item"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/delete_opt"
    android:icon="@drawable/ic_delete_white_24dp"
    android:title="@string/opt_delete_item"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/fav_opt"
    android:icon="@drawable/ic_favorite_border_white_24dp"
    android:title="@string/opt_mark_as_fav"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/refresh_opt"
    android:icon="@drawable/ic_sync_white_24dp"
    android:title="@string/opt_refresh_item"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/share_opt"
    android:icon="@drawable/ic_share_white_24dp"
    android:title="@string/opt_share"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/place_opt"
    android:icon="@drawable/ic_place_white_24dp"
    android:title="@string/opt_view_place"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/rename_opt"
    android:icon="@drawable/ic_edit_white_24dp"
    android:title="@string/opt_rename_item"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

  <item android:id="@+id/sro_opt"
    android:icon="@drawable/ic_public_white_24dp"
    android:title="@string/opt_open_sro"
    android:iconTint="?android:attr/textColorPrimary"
    app:iconTint="?android:attr/textColorPrimary"
    app:showAsAction="ifRoom" />

</menu>
